# ed25519

./: CMakeLists.txt  LICENSE
.github/workflows/: ci.yml
include/: donna128_scalarmult.h  ed25519.h  fe_pow22523.h  ge.h  ge_double_scalarmult_base_negate_vartime.h  ge_double_scalarmult_negate_vartime.h  ge_p2_to_p3.h  ge_scalarmult.h  ge_scalarmult_base.h  ref10_scalarmult.h  sc_check.h
src/: benchmark.cpp  donna128_scalarmult.cpp  fe_pow22523.cpp  ge_double_scalarmult_base_negate_vartime.c  ge_double_scalarmult_base_negate_vartime.cpp  ge_double_scalarmult_negate_vartime.c  ge_p2_to_p3.cpp  ge_scalarmult.c  ge_scalarmult.cpp  ge_scalarmult_base.c  ref10_scalarmult.cpp  sc_0.c  sc_check.c
